<resources>
    <string name="app_short_name">尘负荷在线</string>
    <string name="app_name">尘负荷在线监测</string>
    <string name="login_button_string">登录</string>
    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="save_username_passwd">自动登录</string>
    <string name="super_flag">后台管理</string>

    <string name="title_activity_launch">尘负荷在线</string>
    <string name="dummy_content">尘负荷\n在线监控系统</string>
    <!--<string name="copy_right">Copyright ©天津七一二通信广播股份有限公司</string>-->
    <string name="copy_right"></string>

    <string name="settings">设置</string>
    <string name="logout">登出</string>
    <string name="update">检查更新</string>
    <string name="upgrade">升级</string>
    <string name="cancel">以后</string>
    <string name="current_version">当前版本</string>
    <string name="new_version">新版本</string>
    <string name="upgrade_prompt">有新版本，是否升级</string>
    <string name="version_desc">版本描述</string>
</resources>
