<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="cn.hb712.webapp.LoginActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/login_margin_Top"
        android:layout_marginStart="@dimen/login_margin_horizontal"
        android:layout_marginEnd="@dimen/login_margin_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColorHint="@color/login_textHintColor"
            android:textColor="@color/login_textColor"
            android:textCursorDrawable="@null"
            android:inputType="text"
            style="@style/AppTheme"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/login_textHintColor"
            android:textColor="@color/login_textColor"
            android:textCursorDrawable="@null"
            style="@style/AppTheme"
            tools:ignore="LabelFor" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/save_username_passwd"
                android:text="@string/save_username_passwd"
                android:textColor="@color/login_textColor"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginRight="@dimen/setting_layout_margin_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/super_flag"
                android:text="@string/super_flag"
                android:textColor="@color/login_textColor"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/login_button_background"
            android:textColor="@color/login_textColor"
            style="@style/AppTheme"
            android:text="@string/login_button_string" />

        <TextView
            android:id="@+id/message"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center"
            android:textColor="@color/login_textHintColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/result_message"
            android:layout_marginTop="@dimen/fab_margin"
            android:textColor="@color/login_textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ImageView
        android:id="@+id/loading_image"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_layout"
        android:src="@drawable/action_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/login_logo_image"
        android:layout_width="303dp"
        android:layout_height="116dp"
        android:layout_alignStart="@+id/login_layout"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="41dp"
        app:srcCompat="@mipmap/green_car" />

</android.widget.RelativeLayout>

